adding contact email

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <!-- Contact -->
     <section class="page-section pb-0" id="contact">
         <div class="container px-4 px-lg-5 text-center">
-            <a class="btn btn-primary btn-lg px-5 py-3 fs-6 fw-medium rounded-pill" href="" target="_blank">Entre em
+            <a class="btn btn-primary btn-lg px-5 py-3 fs-6 fw-medium rounded-pill" href="mailto:condominusLtda@gmail.com" target="_blank">Entre em
                 contato</a>
         </div>
     </section>
@@ -396,7 +396,7 @@
                                             ao início
                                         </a>
                                         <a class="btn btn-primary btn-lg px-lg-4 py-3 fs-6 rounded-pill fw-medium text-sm-nowrap"
-                                            href="" target="_blank">Entre em contato</a>
+                                            href="mailto:condominusLtda@gmail.com" target="_blank">Entre em contato</a>
                                     </div>
                                 </div>
                             </div>
@@ -414,7 +414,7 @@
         <div class="container pb-4">
             <div class="row">
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-last text-center text-lg-start">
-                    <a class="btn btn-primary btn-lg px-5 py-4 fs-6 rounded-pill fw-medium w-100" href=""
+                    <a class="btn btn-primary btn-lg px-5 py-4 fs-6 rounded-pill fw-medium w-100" href="mailto:condominusLtda@gmail.com"
                         target="_blank">Entre em contato</a>
                 </div>
 
@@ -425,7 +425,7 @@
 
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-0 text-center text-lg-start">
                     <h5 class="text-white mb-4">Suporte ao cliente</h5>
-                    <a href="mailto:condolife@gmail.com" class="text-white text-decoration-none">Fale Conosco</a>
+                    <a href="mailto:condominusLtda@gmail.com" class="text-white text-decoration-none">Fale Conosco</a>
                 </div>
 
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-1 text-center text-lg-start">
