changing colors and general improvements

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     <header class="hero py-5">
         <div class="container px-5 pb-5 h-100">
             <div class="row gx-5 mt-5 mt-sm-0 align-items-sm-center h-100">
-                <div class="col-lg-6 col-sm-10">
+                <div class="col-lg-5 col-sm-10">
                     <!-- Header -->
                     <div class="text-start" id="header">
                         <h1 class="display-3 fw-bolder mb-5 text-green">
-                            CondoLife
+                            Condominus
                         </h1>
                         <h2 class="text-green">
                             Gerenciar um condomínio nunca foi tão fácil!
                         </h2>
                         <p class="my-5 text-black-60 fw-medium pe-6 pe-lg-0 me-5 me-lg-0">
-                            Empresa em ascensão que busca trazer uma maior facilidade<br>
-                            no gerenciamento de complexos residenciais!
+                            Buscamos simplificar o máximo o processo<br>
+                            de gerenciamento de complexos residenciais!
                         </p>
                         <div class="d-grid gap-3 d-sm-flex justify-content-start mb-3">
                             <a class="btn btn-primary btn-lg px-5 py-3 me-3 fs-6 fw-medium rounded-pill shadow"
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 col-md-10 mt-4 mt-lg-0">
+                <div class="col-lg-7 col-12 col-md-10 mt-4 mt-lg-0">
                     <img src="assets/img/condominium.png" class="w-100"></img>
                 </div>
             </div>
@@ -285,10 +285,10 @@
                             class="col-lg-6 col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Entrar
+                                    Tela de <b>Login</b>
                                 </h2>
                                 <p class="text-secondary mb-5">
-                                    <b>Fácil acesso:</b> os moradores poderão se cadastrar utilizando o número do condomínio.
+                                    <b>Acesso simplificado:</b> Os moradores poderão fazer o <b>login</b> na plataforma <span>utilizando apenas <b><nobr>e-mail</nobr> e senha.</b></span></b>
                                 </p>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -298,16 +298,19 @@
                             </div>
                         </div>
                         <div class="col-md-4 offset-lg-2 text-md-end">
-                            <img src="assets/img/Normal-1.png" class="w-75" />
+                            <img src="assets/img/Entrar.png" class="w-75" />
                         </div>
                     </div>
                     <div class="row carousel-item flex-column-reverse flex-md-row">
                         <div
-                            class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
+                            class="col-lg-6 col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Fácil <b>Cadastro</b> utilizando o número do condomínio.
+                                    Tela de <b>Cadastro</b>
                                 </h2>
+                                <p class="text-secondary mb-5">
+                                    <b>Fácil acesso:</b> os moradores poderão se <b>cadastrar</b> utilizando o <b>número do condomínio</b> e <b>seus dados</b>.
+                                </p>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
                                 <div class="row">
@@ -323,17 +326,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 text-md-end">
-                            <img src="assets/img/Normal-2.png" class="w-75" />
+                        <div class="col-md-4 offset-lg-2 text-md-end">
+                            <img src="assets/img/Cadastrar.png" class="w-75" />
                         </div>
                     </div>
                     <div class="row carousel-item flex-column-reverse flex-md-row">
                         <div
-                            class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
+                            class="col-lg-6 col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    <b>Menu</b> de funcionalidades.
+                                    <b>Menu</b> de funcionalidades
                                 </h2>
+                                <p class="text-secondary mb-5">
+                                    Os moradores poderão acessar todas as <b>funcionalidades</b> do aplicativo por meio de um menu <b>intuitivo</b>.
+                                </p>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
                                 <div class="row">
@@ -349,17 +355,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 text-md-end">
-                            <img src="assets/img/Normal-3.png" class="w-75" />
+                        <div class="col-md-4 offset-lg-2 text-md-end">
+                            <img src="assets/img/Home.png" class="w-75" />
                         </div>
                     </div>
                     <div class="row carousel-item flex-column-reverse flex-md-row">
                         <div
-                            class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
+                            class="col-lg-6 col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Chat de <b>Moradores</b> e <b>Síndico.</b>
+                                    Área de <b>Reservas</b>
                                 </h2>
+                                <p class="text-secondary mb-5">
+                                    Nesta área os moradores podem <b>vizualizar as reservas</b> que já foram realizadas.
+                                </p>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
                                 <div class="row">
@@ -375,17 +384,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 text-md-end">
-                            <img src="assets/img/Normal-4.png" class="w-75" />
+                        <div class="col-md-4 offset-lg-2 text-md-end">
+                            <img src="assets/img/Area Reserva 1.png" class="w-75" />
                         </div>
                     </div>
                     <div class="row carousel-item flex-column-reverse flex-md-row">
                         <div
-                            class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
+                            class="col-lg-6 col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Área de cadastro de reservas.
+                                    Área de <b>cadastro de reservas</b>
                                 </h2>
+                                <p class="text-secondary mb-5">
+                                    O morador poderá fazer uma <b>nova reserva</b> selecionando apenas o <b>local desejado</b> e a <b>data/hora</b> da utilização
+                                </p>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
                                 <div class="row">
@@ -401,8 +413,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 text-md-end">
-                            <img src="assets/img/Normal-5.png" class="w-75" />
+                        <div class="col-md-4 offset-lg-2 text-md-end">
+                            <img src="assets/img/Area Reserva 2.png" class="w-75" />
                         </div>
                     </div>
                 </div>
@@ -414,7 +426,7 @@
         <div class="container pb-4">
             <div class="row">
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-last text-center text-lg-start">
-                    <a class="btn btn-primary btn-lg px-5 py-4 fs-6 rounded-pill fw-medium w-100" href="mailto:condominusLtda@gmail.com"
+                    <a class="btn-footer btn btn-primary btn-lg px-5 py-4 fs-6 rounded-pill fw-medium w-100" href="mailto:condominusLtda@gmail.com"
                         target="_blank">Entre em contato</a>
                 </div>
 
@@ -464,7 +476,7 @@
             </div>
             -->
             <div class="border-top d-lg-flex pt-5 text-center text-lg-start order-lg-first">
-                <div class="text-center text-lg-end text-white order-lg-last">
+                <div class="credits text-center text-lg-end text-white order-lg-last">
                     <span><a href="https://www.freepik.com/free-vector/suburbia-buildings-composition-with-lawns-apartments-streets-isometric_7286650.htm#query=apartment%20building%20isometric&position=11&from_view=search&track=ais"
                             class="text-white text-decoration-none">Hero Image by macrovector</a> on <a
                             href="https://br.freepik.com/" class="text-white text-decoration-none">Freepik</a></span>
