--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>CondoLife</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon2.png" />
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Google fonts -->
@@ -432,7 +432,7 @@
 
                 <div
                     class="col-lg-3 col-md-6 offset-md-3 offset-lg-0 my-4 my-lg-0 order-lg-first text-center text-lg-start">
-                    <img src="assets/img/logo.png" class="w-75" />
+                    <img src="assets/img/logo2.png" class="w-75" />
                 </div>
 
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-0 text-center text-lg-start">
